--- a/style.css
+++ b/style.css
@@ -40,9 +40,10 @@ body, html {
 }
 
 .topbar nav {
-    float: right;
+    position:relative;
+    float:right;
     font-size: 25px;
-    margin-top: 15px;
+    margin-top:40px;
 }
 
 .topbar .logo img{
@@ -75,13 +76,12 @@ body, html {
     height: 35px;
     width: 300px;
     margin-right: 30px;
+    margin-left: 30px;
     border:solid 2px #9F9F9F;
   }
 
   input[type=text] {
      width: 30%;
-     -webkit-transition: width 0.15s ease-in-out;
-     transition: width 0.15s ease-in-out;
   }
 
   /* When the input field gets focus,
@@ -90,25 +90,33 @@ body, html {
     width: 70%;
   }
 
- #list{
+#list{
     position:relative;
-   background-color:white;
-   float:right;
-   width: 300px;
-   padding-bottom: 20px;
-   top: 80px;
-   left:300px;
-   border-radius: 10px;
-   max-height: 150px;
-   overflow-y: scroll;
+    float:right;
+    background-color:white;
+    overflow-y: scroll;
+    width: 300px;
+    border-radius: 10px;
+    max-height: 150px;
+    top: 60px;
+    left: 330px;
+    margin-left: -300px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    box-shadow: 0px 2px 2px 0px rgba(94, 69, 69, 0.10);
+}
+
+#list a{
+    color:black;
+    text-decoration:none;
   }
 
 .liens{
-  display: list-item;    
+  display: none;    
  } 
 
 
-.topbar a img:hover{
+.topbar a img.rechercher:hover{
     transform: scale(1.05,1.05);
     opacity: 1;
 }
@@ -175,9 +183,10 @@ body, html {
 }
 
 .container a{
-    bottom: 5vw;
 	text-decoration:none;
 	font-size: 1.8vw;
+    color:white;
+    font-weight:400;
 }
 
 .box {
@@ -192,7 +201,7 @@ body, html {
     border-radius: 10px;
     box-shadow: 4px 4px 30px rgba(94, 69, 69, 0.10);
     border: solid white 5px;
-
+    height: 31vw;
 }
 
 .box:hover{
@@ -202,6 +211,7 @@ body, html {
 
 .box img{
 	width : 10vw;
+    height:10vw;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
