--- a/style.css
+++ b/style.css
@@ -50,8 +50,7 @@ body, html {
     float: left;
     margin-left: 1vw;
     width: 100px;
-    max-width: 100px;
-    height: auto;
+    height: 100px;
 }
 
 .topbar nav a {
@@ -129,7 +128,7 @@ body, html {
 .banniere {
     margin-top: 150px;
     height: 50vw;
-    background: no-repeat center center / cover url("img/michelet.jpg");
+    background: no-repeat center center / cover url("img/michelet.png");
     vertical-align: auto;
     text-align: center;
     margin-bottom: -100px;
@@ -166,6 +165,69 @@ body, html {
     font-weight: bolder;
     text-shadow: 2px 2px 2px black
 }
+  
+  .contener_slideshow
+  {
+    width: 100%;
+    height:500px;
+    overflow: hidden;
+    position: relative;
+    background-image: url(img_diapo_fond.png) no-repeat;
+    top: 150px;
+    z-index:1;
+  }
+
+  .contener_slideshow img
+  {
+    width: 100%;
+    height:500px;
+    object-fit:cover;
+  }
+  .slid_1, .slid_2, .slid_3
+  {
+    position: absolute;
+    z-index:1;
+    width:100%;
+    height:500px;
+  }
+  .slid_1{left: 0;}
+  .slid_2{left: 100%;}
+  .slid_3{left: 200%;}
+  .contener_slide
+  {
+    width: 100%;
+    height: 500px;;
+    left:0px;
+    position: absolute;
+    -webkit-animation-duration: 30s;
+    -webkit-animation-iteration-count:infinite;
+    -webkit-animation-name: anim_slide;
+    -moz-animation-duration: 30s;
+    -moz-animation-iteration-count:infinite;
+    -moz-animation-name: anim_slide;
+    -ms-animation-duration: 30s;
+    -ms-animation-iteration-count:infinite;
+    -ms-animation-name: anim_slide;
+    animation-duration: 30s;
+    animation-iteration-count:infinite;
+    animation-name: anim_slide;
+  }
+  @-webkit-keyframes anim_slide 
+  {
+    0% {left:0px;}32% {left:0px;}33% {left:-100%;}65% {left:-100%;}66% {left:-200%;}100% {left:-200%;}
+  }
+  @-moz-keyframes anim_slide 
+  {
+    0% {left:0px;}32% {left:0px;}33% {left:-100%;}65% {left:-100%;}66% {left:-200%;}100% {left:-200%;}
+  }
+  @-ms-keyframes anim_slide 
+  {
+    0% {left:0px;}32% {left:0px;}33% {left:-100%;}65% {left:-100%;}66% {left:-200%;}100% {left:-200%;}
+  }
+  @keyframes anim_slide 
+  {
+    0% {left:0px;}32% {left:0px;}33% {left:-100%;}65% {left:-100%;}66% {left:-200%;}100% {left:-200%;}
+  }
 
 .main {
     float:left;
@@ -177,9 +239,11 @@ body, html {
 }
 
 .container {
+    position:relative;
 	padding-left: 3vw;
 	padding-right:3vw;
 	text-align:center;
+    z-index:9;
 }
 
 .container a{
@@ -224,6 +288,54 @@ body, html {
 
 .vf{
 	background: rgb(133, 150, 47, 1);
+}
+
+.actualite{
+    color:black;
+    height: 50vw;
+    width: 29.9vw;
+    text-align: left;
+    font-size: 1.2vw;
+    line-height: 1.2 ;
+    padding: 1.5vw;
+    z-index: 9;
+    background: white;
+    border: solid rgb(133, 170, 47, 0.7) 10px;
+}
+
+.actualite:hover{
+    border: solid rgb(133, 170, 47, 01) 10px;
+    transform: scale(1.05,1.05);
+}
+
+.actualite img{
+    width: 24vw;
+    height: 14vw;
+    object-fit:cover;
+}
+
+
+h1.titre{
+    position:absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index:9;
+    color:white;
+    font-size: 3vw;
+    font-weight: bolder;
+    font-size: 5vw;
+    color: rgb(255, 244, 244);
+    text-shadow: 3px 3px 3px black;
+    background-color: rgb(133, 170, 47, 0.5) ;
+}
+h2{
+    font-size:2.3vw;
+}
+
+.date{
+    font-style: italic;
+    color:grey;
 }
 
 .footer {
